<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="Document root: " />
    <TextView
        android:id="@+id/document_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0"
        android:text="Unset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0"
            android:text="Unset" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port" />
        <TextView
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0"
            android:text="Unset" />
    </LinearLayout>

<!--
    Set weightSum MUST be done from code.
    It required to hide/unhide QRCodeURL button
    depends on running android version
        android:weightSum="3"
-->
    <LinearLayout
        android:id="@+id/buttonsBlock"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonSendURL"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/send" />

        <Button
            android:id="@+id/buttonQRCodeURL"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/qr_code" />

        <Button
            android:id="@+id/buttonOpenBrowser"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/browser" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <ToggleButton
        android:textOn="@string/stop"
        android:textOff="@string/start"
        android:id="@+id/buttonStartStop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:textIsSelectable="true"
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>
